<resources>
    <string name="app_name">Layout Type</string>
    <string name="organisation">Organisation:</string>
    <string name="name">Name:</string>
    <string name="mirea">MIREA</string>
    <string name="tony">Tony Stark</string>
    <string name="tony_stark">Tony Stark</string>
    <string name="_7_911_111_11_11">+7 (911)111-11-11</string>
    <string name="mobile">(Mobile)</string>
    <string name="phone">Phone</string>
    <string name="todo">TODO</string>
</resources>